Archive2/92/286cf5f540d80d/output
main.cpp: In function 'int main()':
main.cpp:10:19: error: ISO C++ forbids variable length array 'a' [-Wvla]
         char a[f()];
                   ^
